--- a/templates.html
+++ b/templates.html
@@ -7,16 +7,17 @@
   <link rel="stylesheet" href="./assets/templates.css" />
 </head>
 <body>
+  
   <header class="topbar">
     <div class="brand">
-      <div class="logo-badge" aria-hidden="true"></div>
+      <img src="./assets/img/logo_black.png" alt="Logo TSP" class="logo-badge" />
       <div>
         <h1>Plantillas TSP</h1>
         <div class="subtitle">Descarga y usa — sin versionado</div>
       </div>
     </div>
     <div class="filters">
-      <input id="search" class="search" type="search" placeholder="Buscar plantilla… (⌘/Ctrl+K)" />
+      <input id="search" class="search" type="search" placeholder="Buscar plantilla" />
       <select id="filterCategory">
         <option value="">Todas las categorías</option>
       </select>
