--- a/index.html
+++ b/index.html
@@ -10,23 +10,25 @@
     <div class="app">
       <aside>
         <div class="logo">
-  <img src="./assets/img/logo_black.png" alt="Logo TSP" class="logo-badge" />
-  <div>
-    <h1>Portal TSP</h1>
-    <div class="subtitle">Documentación & Versionado</div>
-  </div>
-</div>
-
-
+          <img
+            src="./assets/img/logo_black.png"
+            alt="Logo TSP"
+            class="logo-badge"
+          />
+          <div>
+            <h1>Portal TSP</h1>
+            <div class="subtitle">Documentación & Versionado</div>
+          </div>
+        </div>
         <div style="margin-top: 6px; font-size: 13px; color: var(--muted)">
           Roles
         </div>
-        <div class="role-list" id="roleList"></div>
+        <div class="role-list" id="roleList" style="margin-top: 12px"></div>
         <div style="margin-top: 6px; font-size: 13px; color: var(--muted)">
           Recursos
         </div>
         <div class="role-list" id="extraLinks" style="margin-top: 12px">
-          <a class="role-btn role-link" href="./templates.html">plantillas</a>
+          <a class="role-btn role-link" href="./templates.html" style="font-size: 14px;">plantillas</a>
         </div>
       </aside>
 
