--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
               <option value="">Todas las fases</option>
               <option value="iniciación">Iniciación</option>
               <option value="estrategia">Estrategia</option>
-               <option value="otras">Otras</option>
+              <option value="requerimientos">Requerimientos</option>
+              <option value="otras">Otras</option>
             </select>
             <select id="sort">
               <option value="updatedDesc">Orden: Reciente</option>
