add: new phase and fix documentation

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
               <option value="iniciación">Iniciación</option>
               <option value="estrategia">Estrategia</option>
               <option value="requerimientos">Requerimientos</option>
+              <option value="planeacion">Planeación</option>
               <option value="otras">Otras</option>
             </select>
             <select id="sort">
