Add: First phase of second cycle

--- a/index.html
+++ b/index.html
@@ -42,6 +42,15 @@
               <option value="estrategia">Estrategia</option>
               <option value="requerimientos">Requerimientos</option>
               <option value="planeacion">Planeación</option>
+              <option value="diseño">Diseño</option>
+              <option value="implementación">Implementación</option>
+              <option value="pruebas">Pruebas</option>
+              <option value="postmortem">Postmortem</option>
+
+              <option value="iniciación-II | estrategia-II">Iniciación-II | Estrategia-II</option>
+              <option value="requerimientos-II | planeación-II">Requerimientos-II | Planeación-II</option>
+              <option value="diseño-II | implementación-II">Diseño-II | Implementación-II</option>
+              <option value="pruebas-II | postmortem-II">Pruebas-II | Postmortem-II</option>
               <option value="otras">Otras</option>
             </select>
             <select id="sort">
