--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
 
               <option value="iniciación-II | estrategia-II">Iniciación-II | Estrategia-II</option>
               <option value="requerimientos-II | planeación-II">Requerimientos-II | Planeación-II</option>
-              <option value="diseño-II | implementación-II">Diseño-II | Implementación-II</option>
+              <option value="diseño-II">Diseño-II</option>
+              <option value="implementación-II">Implementación-II</option>
               <option value="pruebas-II | postmortem-II">Pruebas-II | Postmortem-II</option>
               <option value="otras">Otras</option>
             </select>
