Add: Phase of implementation and testing

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
               <option value="iniciación-II | estrategia-II">Iniciación-II | Estrategia-II</option>
               <option value="requerimientos-II | planeación-II">Requerimientos-II | Planeación-II</option>
               <option value="diseño-II">Diseño-II</option>
-              <option value="implementación-II">Implementación-II</option>
-              <option value="pruebas-II | postmortem-II">Pruebas-II | Postmortem-II</option>
+              <option value="implementación-II | pruebas-II">Implementación-II | Pruebas-II</option>
+              <option value="postmortem-II">Postmortem-II</option>
               <option value="otras">Otras</option>
             </select>
             <select id="sort">
